<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_170dp">

    <com.example.sonng266.travelapp.widgets.JLabel
        android:id="@+id/tv_title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/title_dialog_sos_send"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_20sp"
        app:jLabelFont="@string/font_lato_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.sonng266.travelapp.widgets.JLabel
        android:id="@+id/tv_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="5"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/_40sp"
        android:textStyle="bold"
        app:jLabelFont="@string/font_lato_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog" />

    <com.example.sonng266.travelapp.widgets.JButton
        android:id="@+id/bt_cancel"
        android:layout_width="@dimen/_150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/btn_son_custom"
        app:backgroundTint="@android:color/darker_gray"
        android:text="@string/cancel"
        app:jLabelFont="@string/font_lato_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_countdown" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.example.sonng266.travelapp.widgets.JButton
        android:id="@+id/bt_send_now"
        android:layout_width="@dimen/_150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/send_now"
        android:background="@drawable/btn_son_custom"
        android:textColor="@android:color/white"
        app:jLabelFont="@string/font_lato_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_countdown" />
</android.support.constraint.ConstraintLayout>